// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-advisor - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Azure Advisor reviews resources and provides recommendations using advisor_* MCP tools. WHEN: "run an advisor review", "check my Azure advisor recommendations", "summarize advisor findings", "what does Advisor say about my subscription", "give me an advisor health check", "audit my Azure resources with Advisor". USE FOR: read-only sweeps with catalog, recommendations, and IaC fixes. DO NOT USE FOR: changing resources, billing analysis (use azure-cost), or non-Advisor troubleshooting (use azure-diagnostics).",
  "extractedKeywords": [
    "about",
    "advisor",
    "advisor_",
    "analysis",
    "audit",
    "azure",
    "azure-cost",
    "azure-diagnostics",
    "billing",
    "catalog",
    "changing",
    "check",
    "cli",
    "does",
    "findings",
    "fixes",
    "give",
    "health",
    "mcp",
    "non-advisor",
    "provides",
    "read-only",
    "recommendations",
    "resources",
    "review",
    "reviews",
    "security",
    "subscription",
    "summarize",
    "sweeps",
    "tools",
    "troubleshooting",
    "using",
    "what",
    "when",
    "with",
  ],
  "name": "azure-advisor",
}
`;

exports[`azure-advisor - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "about",
  "advisor",
  "advisor_",
  "analysis",
  "audit",
  "azure",
  "azure-cost",
  "azure-diagnostics",
  "billing",
  "catalog",
  "changing",
  "check",
  "cli",
  "does",
  "findings",
  "fixes",
  "give",
  "health",
  "mcp",
  "non-advisor",
  "provides",
  "read-only",
  "recommendations",
  "resources",
  "review",
  "reviews",
  "security",
  "subscription",
  "summarize",
  "sweeps",
  "tools",
  "troubleshooting",
  "using",
  "what",
  "when",
  "with",
]
`;
